here is where I stopped to dix wrapping issue

--- a/index.html
+++ b/index.html
@@ -50,24 +50,32 @@
             <h2>My Work</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./assets/images/placeholder-image.png" alt="" height="100px">
-                    </a>
+                    <div style="width: 150px; height: 150px; overflow: hidden;">
+                        <a href="">
+                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
+                        </a>
+                    </div>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./assets/images/placeholder-image.png" alt="" height="100px">
-                    </a>
+                    <div style="width: 150px; height: 150px; overflow: hidden;">
+                        <a href="">
+                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
+                        </a>
+                    </div>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./assets/images/placeholder-image.png" alt="" height="100px">
-                    </a>
+                    <div style="width: 150px; height: 150px; overflow: hidden;">
+                        <a href="">
+                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
+                        </a>
+                    </div>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="./assets/images/placeholder-image.png" alt="" height="100px">
-                    </a>
+                    <div style="width: 150px; height: 150px; overflow: hidden;">
+                        <a href="">
+                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
+                        </a>
+                    </div>
                 </li>
             </ul>
         </section>
