made image array lesss goooo

--- a/index.html
+++ b/index.html
@@ -47,36 +47,38 @@
             </div>
         </article>
         <section id="my-work" class="img-section">
-            <h2>My Work</h2>
+            <h2>My Work:</h2>
             <ul>
-                <li>
-                    <div style="width: 150px; height: 150px; overflow: hidden;">
-                        <a href="">
-                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div style="width: 150px; height: 150px; overflow: hidden;">
-                        <a href="">
-                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div style="width: 150px; height: 150px; overflow: hidden;">
-                        <a href="">
-                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div style="width: 150px; height: 150px; overflow: hidden;">
-                        <a href="">
-                            <img src="./assets/images/run-buddy.PNG" alt="" height="100px">
-                        </a>
-                    </div>
-                </li>
+                <section class="imgArray">
+                    <li>
+                        <div class="img1">
+                            <a href="">
+                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img2">
+                            <a href="">
+                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img3">
+                            <a href="">
+                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img4">
+                            <a href="">
+                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                            </a>
+                        </div>
+                    </li>
+                </section>
             </ul>
         </section>
     </div>
