--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <section class="hero" style="width: 100%; height: 300px; overflow: hidden;">
         <div class="child">
-            <img src="./assets/images/20210312_183054.jpg" alt="Beautiful Mexico sunset">
+            <img src="./assets/images/20210312_183054.jpg" alt="Beautiful Mexico sunset, taken by me">
         </div>
     </section>
     <div class="twowrap">
@@ -37,7 +37,8 @@
                 About Me:
             </h2>
             <div class="containertext">
-                <p>I was born and raised in Tucson, Arizona. I always had an interest in computers and sofware
+                <p>
+                    I was born and raised in Tucson, Arizona. I always had an interest in computers and sofware
                     development.
                     From an early age I was trying to develop video games. While none of these turned out, it was an
                     introduction into the coding workspace.
@@ -46,13 +47,15 @@
                 </p>
             </div>
         </article>
+        <br>
+
         <section id="my-work" class="img-section">
             <h2>My Work:</h2>
             <ul>
                 <section class="imgArray">
                     <li>
                         <div class="img1">
-                            <a href="">
+                            <a href="https://eliassaunders.github.io/run-buddy/">
                                 <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
                             </a>
                         </div>
@@ -60,27 +63,30 @@
                     <li>
                         <div class="img2">
                             <a href="">
-                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                                <img src="./assets/images/placeholder-image.png" alt="" height="150px" width="170px">
                             </a>
                         </div>
                     </li>
                     <li>
                         <div class="img3">
                             <a href="">
-                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                                <img src="./assets/images/placeholder-image.png" alt="" height="150px" width="170px">
                             </a>
                         </div>
                     </li>
                     <li>
                         <div class="img4">
                             <a href="">
-                                <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                                <img src="./assets/images/placeholder-image.png" alt="" height="150px" width="170px">
                             </a>
                         </div>
                     </li>
                 </section>
             </ul>
         </section>
+    </div>
+    <div class="personal-image">
+        <img src="./assets/images/me.jpg" alt="">
     </div>
     <div id="contact-info" class="contact-section">
         <h2>Contact Me</h2>
@@ -95,6 +101,8 @@
             <li>Git Account: <a href="https://github.com/eliassaunders">eliassaunders</a></li>
         </ul>
     </div>
+    <br>
+    <br>
     <footer>
         <h3>Thanks for visiting!</h3>
         <p>Elias Saunders 2021</p>
