Fixed positioning of text for image final push

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <div class="img1">
                             <a href="https://eliassaunders.github.io/run-buddy/">
                                 <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
+                                <div class="img1text">Run Buddy</div>
                             </a>
                         </div>
                     </li>
