--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <section class="imgArray">
                     <li>
                         <div class="img1">
-                            <a href="https://eliassaunders.github.io/run-buddy/">
+                            <a href="https://eliassaunders.github.io/run-buddy/" target="_blank">
                                 <img src="./assets/images/run-buddy.PNG" alt="" height="150px" width="170px">
                                 <div class="img1text">Run Buddy</div>
                             </a>
@@ -63,8 +63,9 @@
                     </li>
                     <li>
                         <div class="img2">
-                            <a href="">
-                                <img src="./assets/images/placeholder-image.png" alt="" height="150px" width="170px">
+                            <a href="https://eliassaunders.github.io/Project-1/" target="_blank">
+                                <img src="../../PROJECT 1/Project-1/assets/Capture.PNG" alt="" height="150px" width="170px">
+                                <div class="img1text">Make Me!</div>
                             </a>
                         </div>
                     </li>
