changed file location for Project image, was absolute path.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li>
                         <div class="img2">
                             <a href="https://eliassaunders.github.io/Project-1/" target="_blank">
-                                <img src="../../PROJECT 1/Project-1/assets/Capture.PNG" alt="" height="150px" width="170px">
+                                <img src="./assets/Capture.PNG" alt="" height="150px" width="170px">
                                 <div class="img1text">Make Me!</div>
                             </a>
                         </div>
